examples/test/testpolicy17882.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17882
  namespace: namespace453
spec:
  podSelector:
    matchLabels:
      key48: value11
      key14: value48
      key24: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value33
          key26: value13
          key40: value47
